syntax = "proto3";

option go_package = "./pb";

package pb;

message Msg {
    int64   Ver  = 1;        // protocol version
    int64   Operation =2;    // operation for request
    string  SeqId     =3;   // sequence number chosen by client
    bytes   Body       =4;  // binary body bytes
}

message PushMsgRequest{
    int64 UserId =1;
    Msg   Msg =2;
}

message PushRoomMsgRequest {
    int64  RoomId=1;
    Msg    Msg=2;
}

message PushRoomCountRequest{
  int64 RoomId =1;
  int64 Count  =2;
}

message SuccessReply {
  int64 Code =1;
  string Msg=2;
}

message ConnectRequest {
  string AuthToken = 1;
  int64  RoomId = 2;
  string ServerId = 3;
}

message ConnectReply {
  int64  UserId = 1;
}

message DisConnectRequest {
  int64 RoomId = 1;
  int64 UserId = 2;
}

message DisConnectReply {
  bool Has = 1;
}

service ws {
  //返送单条消息
  rpc PushSingleMsg(PushRoomMsgRequest) returns (SuccessReply);
  rpc Connect(ConnectRequest) returns(ConnectReply);
  rpc DisConnect(DisConnectRequest) returns (DisConnectReply);

}